# learn-cpp-make

./: CMakeLists.txt
hack/: build.sh  configure.sh  run.sh
include/: HelloConfig.h.in
lib/adder/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
